# autoshutdown

./: Cargo.toml  README.md  autoshutdown.service
src/: main.rs
