[package]
name = "autoshutdown"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
description = "Automatically shut down the machine after a period of inactivity"
repository = "https://github.com/nicholasbishop/autoshutdown"
license = "Apache-2.0"

[dependencies]
regex = "0.2"
simple-error = "0.1"
structopt = "0.2"
